# jupyterlab-bxplorer

./: .bxplorer.db  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json
jupyter-config/nb-config/: jupyterlab_bxplorer.json
jupyter-config/server-config/: jupyterlab_bxplorer.json
jupyterlab_bxplorer/: .bxplorer.db  .gitignore  .prettierignore  FixUrllib951.py  __init__.py  cmd_launcher.py  db_handler.py  handlers.py
jupyterlab_bxplorer/.github/workflows/: build.yml  check-release.yml
jupyterlab_bxplorer/custom_encoders/: JSONEncoder.py
jupyterlab_bxplorer/custom_exceptions/: CustomExceptions.py
jupyterlab_bxplorer/custom_types/: ChonkyFileData.py  ChonkyFilesListCache.py  RequestResponse.py
schema/: plugin.json
src/: handler.ts  index.ts  svg.d.ts
src/components/: CustomProps.tsx  DownloadComponent.tsx  DownloadPathSetterComponent.tsx  DownloadsContext.tsx  DownloadsPanelComponent.tsx  DownloadsPanelWrapperProviderComponent.tsx  ExternalBucketSearchComponent.tsx  FavoriteContext.tsx  FileBrowserComponent.tsx  FitsContext.tsx  OpenDataDropdownComponent.tsx  PanelComponent.tsx  ViewFitsFileInfoComponent.tsx  downloads.d.ts  favorites.d.ts  fits.d.ts
src/style/: IconsStyle.ts
src/widgets/: BXplorerPanelWidget.tsx  DownloadsPanelWidget.tsx
style/: index.css
