[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab>=3.4.7,<4.0.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-bxplorer"
description = "This is a JupyterLab extension that allows users to explore and interact with cloud storage services."
readme = "README.md"
authors = [{name = "Navteca LLC", email = "info@navteca.com" }]
urls = {text = "https://navteca.com"}
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyter_server",
    "PyYAML",
    "boto3-stubs",
    "tzlocal",
    "mypy-boto3-s3",
    "Werkzeug",
    "psutil",
    "boto3",
    "sqlalchemy",
    "fsspec",
    "S3Fs",
    "astropy"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_bxplorer/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_bxplorer/labextension" = "share/jupyter/labextensions/jupyterlab-bxplorer"
"install.json" = "share/jupyter/labextensions/jupyterlab-bxplorer/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"

[tool.hatch.build.hooks.version]
path = "jupyterlab_bxplorer/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_bxplorer/labextension/static/style.js",
    "jupyterlab_bxplorer/labextension/package.json",
]
skip-if-exists = ["jupyterlab_bxplorer/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab_bxplorer/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.setuptools.package-data]
jupyterlab_bxplorer = ["*.py"]